Заканчивает стилизацию главной

--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -15,7 +15,7 @@
   width: 100%;
 }
 
-.nav__toggle  {
+.nav__toggle {
   background-image: url("../images/icons/cross-mobile.svg");
 }
 
@@ -29,6 +29,8 @@
   color: #ffffff;
   text-align: center;
   text-transform: uppercase;
+  margin: 0;
+  padding: 0;
 }
 
 .site-list__item {
