--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,8 @@
 @import "./blocks/header.less";
 @import "./blocks/body.less";
 @import "./blocks/welcome.less";
+@import "./blocks/advantages.less";
+@import "./blocks/about-sedona.less";
+@import "./blocks/find-hotel.less";
+@import "./blocks/map.less";
+@import "./blocks/footer.less";
