--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -2,7 +2,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("/source/fonts/ptsans.woff2") format("woff2");
+  src: url("/fonts/ptsans.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -10,23 +10,30 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("/source/fonts/ptsansbold.woff2") format("woff2");
+  src: url("/fonts/ptsansbold.woff2") format("woff2");
   font-display: swap;
 }
 
-.text-block__title  {
+.text-block__title {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   font-weight: 700;
   color: #000000;
-text-align: center;
-line-height: 26px;
-text-transform: uppercase;
-background-color: #ffffff;
+  text-align: center;
+  line-height: 26px;
+  text-transform: uppercase;
+  margin: 0;
 }
 
+.text-block__title--white-theme {
+  color: #ffffff;
+}
 
-.text-block__description{
+.text-block__title--icon {
+  text-align: left;
+}
+
+.text-block__description {
   font-family: "PT Sans", sans-serif;
   font-size: 14px;
   font-weight: 400;
@@ -34,9 +41,41 @@ background-color: #ffffff;
   color: #000000;
   text-align: center;
   text-transform: uppercase;
-  background-color: #ffffff;
+  margin: 0;
+}
+
+.text-block__description--white-theme {
+  color: #ffffff;
+}
+
+
+.text-block__description--icon {
+  text-align: left;
 }
 
 .main-container {
   width: 320px;
+}
+
+.button {
+  background-color: #81B3D2;
+  color: #ffffff;
+  font-family: "PT Sans", sans-serif;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  border: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
