--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -6,6 +6,18 @@
   display: flex;
 }
 
+.welcome--catalog {
+  background-image: url("/img/catalog/back-catalog-mobile.jpg");
+  background-color: #1c3d53;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  display: flex;
+}
+
 .welcome__img {
   margin: 90px 19px 85px 19px;
+}
+
+.welcome__img--catalog {
+  margin: 50px 45px 67px 45px;
 }
