--- a/source/less/style.less
+++ b/source/less/style.less
@@ -6,3 +6,6 @@
 @import "./blocks/find-hotel.less";
 @import "./blocks/map.less";
 @import "./blocks/footer.less";
+@import "./blocks/about-catalog.less";
+@import "./blocks/fotoalbum.less";
+@import "./blocks/video.less";
