--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -25,6 +25,17 @@
   margin: 0;
 }
 
+.text-block__title--catalog {
+  font-family: "PT Sans", sans-serif;
+  font-weight: 700;
+  color: #000000;
+  text-transform: uppercase;
+  margin: 0;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: left;
+}
+
 .text-block__title--white-theme {
   color: #ffffff;
 }
@@ -32,6 +43,7 @@
 .text-block__title--icon {
   text-align: left;
 }
+
 
 .text-block__description {
   font-family: "PT Sans", sans-serif;
@@ -51,6 +63,18 @@
 
 .text-block__description--icon {
   text-align: left;
+}
+
+.text-block__description--catalog {
+  font-family: "PT Sans", sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  color: #000000;
+  margin: 0;
+  text-transform: none;
+  text-align: left;
+
 }
 
 .main-container {
