--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,3 +9,5 @@
 @import "./blocks/about-catalog.less";
 @import "./blocks/fotoalbum.less";
 @import "./blocks/video.less";
+@import "./blocks/about-form.less";
+@import "./blocks/forms.less";
