--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -14,6 +14,10 @@
   font-display: swap;
 }
 
+.page__body {
+  width: 320px;
+}
+
 .text-block__title {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
