--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -1,3 +1,15 @@
+@import "./fonts.less";
+@import "./mixins.less";
+@import "./color-variables.less";
+
 .about-sedona {
   padding: 32px 19px 16px 19px;
+}
+
+.text-block__title {
+  .text-block__title ();
+}
+
+.text-block__description {
+  .text-block__description ();
 }
