--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -1,8 +1,26 @@
+@import "./fonts.less";
+@import "./mixins.less";
+@import "./color-variables.less";
+
 .find-hotel {
   padding: 38px 18px 49px 18px;
+}
+
+.button-blue {
+  .button-blue();
 }
 
 .find-hotel__button {
   width: 284px;
   height: 58px;
+  margin-top: 15px;
+}
+
+
+.text-block__title {
+  .text-block__title();
+}
+
+.text-block__description {
+  .text-block__description();
 }
