--- a/source/less/blocks/fotoalbum__item.less
+++ b/source/less/blocks/fotoalbum__item.less
@@ -2,18 +2,19 @@
 @import "./mixins.less";
 @import "./color-variables.less";
 
-.video {
-  padding: 17px 20px 0px 20px;
-}
-
-.video__img {
-  margin-top: 38px;
-}
-
 .text-block__title {
   .text-block__title();
 }
 
+.text-block__title--catalog {
+  text-align: left;
+}
+
 .text-block__description {
   .text-block__description();
+}
+
+.text-block__description--catalog {
+  text-transform: none;
+  text-align: left;
 }
