--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "./blocks/fonts.less";
 @import "./blocks/header.less";
 @import "./blocks/body.less";
 @import "./blocks/welcome.less";
@@ -11,3 +12,10 @@
 @import "./blocks/video.less";
 @import "./blocks/about-form.less";
 @import "./blocks/forms.less";
+@import "./blocks/mixins.less";
+@import "./blocks/color-variables.less";
+@import "./blocks/advantages__list.less";
+@import "./blocks/advantages__item.less";
+@import "./blocks/fotoalbum__item.less";
+@import "./blocks/feedback__input.less";
+@import "./blocks/modal.less";
