--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -1,3 +1,15 @@
+@import "./fonts.less";
+@import "./mixins.less";
+@import "./color-variables.less";
+
 .about-catalog {
   padding: 37px 20px 25px 20px;
+}
+
+.text-block__title {
+  .text-block__title ();
+}
+
+.text-block__description {
+  .text-block__description ();
 }
