--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -1,3 +1,15 @@
+@import "./fonts.less";
+@import "./mixins.less";
+@import "./color-variables.less";
+
 .about-form {
   padding: 36px 20px 28px 20px;
+}
+
+.text-block__title {
+  .text-block__title();
+}
+
+.text-block__description {
+  .text-block__description();
 }
