--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -1,3 +1,8 @@
+@import "./fonts.less";
+@import "./mixins.less";
+@import "./color-variables.less";
+
+
 .footer {
   width: 320px;
   display: flex;
@@ -11,7 +16,7 @@
   font-family: "PT Sans", sans-serif;
   font-size: 21px;
   font-weight: 700;
-  color: #000000;
+  color: @black;
   text-align: center;
   line-height: 26px;
   text-transform: uppercase;
@@ -26,7 +31,7 @@
 
 .social__link {
   text-decoration: none;
-  color: #000000;
+  color: @black;
 }
 
 .html-academy {
