--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -1,13 +1,5 @@
-@import "./fonts.less";
-@import "./mixins.less";
-@import "./color-variables.less";
-
 .find-hotel {
   padding: 38px 18px 49px 18px;
-}
-
-.button-blue {
-  .button-blue();
 }
 
 .find-hotel__button {
@@ -16,11 +8,10 @@
   margin-top: 15px;
 }
 
-
-.text-block__title {
+.find-hotel__title {
   .text-block__title();
 }
 
-.text-block__description {
+.find-hotel__description {
   .text-block__description();
 }
