--- a/source/less/blocks/fotoalbum.less
+++ b/source/less/blocks/fotoalbum.less
@@ -11,3 +11,20 @@
 .fotoalbum__img {
   margin: 24px 0px 15px 0px;
 }
+
+.fotoalbum__title {
+  .text-block__title();
+  text-align: left;
+}
+
+
+.fotoalbum__description {
+  .text-block__description();
+  text-transform: none;
+  text-align: left;
+}
+
+.fotoalbum__number {
+  .text-block__title();
+  text-align: left;
+}
