--- a/source/less/blocks/mixins.less
+++ b/source/less/blocks/mixins.less
@@ -1,6 +1,3 @@
-@import "./fonts.less";
-@import "./color-variables.less";
-
 .visually-hidden() {
   position: absolute;
   width: 1px;
@@ -34,7 +31,7 @@
   margin: 0;
 }
 
-.button-blue() {
+.button {
   background-color: @blue;
   color: @white;
   font-family: "PT Sans", sans-serif;
