--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,7 +1,3 @@
-@import "./fonts.less";
-@import "./mixins.less";
-@import "./color-variables.less";
-
 .video {
   padding: 17px 20px 0px 20px;
 }
@@ -10,10 +6,10 @@
   margin-top: 38px;
 }
 
-.text-block__title {
+.video__title {
   .text-block__title();
 }
 
-.text-block__description {
+.video__description {
   .text-block__description();
 }
