--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,5 @@
+@import "./blocks/mixins.less";
+@import "./blocks/variables.less";
 @import "./blocks/fonts.less";
 @import "./blocks/header.less";
 @import "./blocks/body.less";
@@ -11,11 +13,12 @@
 @import "./blocks/fotoalbum.less";
 @import "./blocks/video.less";
 @import "./blocks/about-form.less";
-@import "./blocks/forms.less";
-@import "./blocks/mixins.less";
-@import "./blocks/color-variables.less";
-@import "./blocks/advantages__list.less";
-@import "./blocks/advantages__item.less";
-@import "./blocks/fotoalbum__item.less";
-@import "./blocks/feedback__input.less";
+@import "./blocks/feedback.less";
+@import "./blocks/hashtag.less";
+@import "./blocks/html-academy.less";
+@import "./blocks/social.less";
+@import "./blocks/button.less";
+@import "./blocks/control-label.less";
+@import "./blocks/nav.less";
+@import "./blocks/site-list.less";
 @import "./blocks/modal.less";
