--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,24 @@
-// Начните писать стили здесь
+@import "./blocks/mixins.less";
+@import "./blocks/variables.less";
+@import "./blocks/fonts.less";
+@import "./blocks/header.less";
+@import "./blocks/body.less";
+@import "./blocks/welcome.less";
+@import "./blocks/advantages.less";
+@import "./blocks/about-sedona.less";
+@import "./blocks/find-hotel.less";
+@import "./blocks/map.less";
+@import "./blocks/footer.less";
+@import "./blocks/about-catalog.less";
+@import "./blocks/fotoalbum.less";
+@import "./blocks/video.less";
+@import "./blocks/about-form.less";
+@import "./blocks/feedback.less";
+@import "./blocks/hashtag.less";
+@import "./blocks/html-academy.less";
+@import "./blocks/social.less";
+@import "./blocks/button.less";
+@import "./blocks/control-label.less";
+@import "./blocks/nav.less";
+@import "./blocks/site-list.less";
+@import "./blocks/modal.less";
