--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -4,7 +4,10 @@
   margin: 0;
   padding: 0;
   .text-block__title();
-}
+  z-index: 1;
+  width: 100%;
+  display: none;
+  }
 
 .site-list__item {
   width: 100%;
@@ -14,3 +17,4 @@
   color: @white;
   text-decoration: none;
 }
+
