--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -4,3 +4,8 @@
 @grey-input: #F2F2F2;
 @grey-button: #E6E6E6;
 @grey-advantages: #EEEEEE;
+
+
+@tablet-width: 768px;
+@desktop-width: 1200px;
+@mobile-width-only: 320px;
