--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,7 +2,6 @@
 @import "./blocks/variables.less";
 @import "./blocks/fonts.less";
 @import "./blocks/header.less";
-@import "./blocks/body.less";
 @import "./blocks/welcome.less";
 @import "./blocks/advantages.less";
 @import "./blocks/about-sedona.less";
@@ -22,3 +21,5 @@
 @import "./blocks/nav.less";
 @import "./blocks/site-list.less";
 @import "./blocks/modal.less";
+@import "./blocks/page.less";
+@import "./blocks/main-container.less";
