--- a/source/less/blocks/about-sedona.less
+++ b/source/less/blocks/about-sedona.less
@@ -1,6 +1,24 @@
 .about-sedona {
+  width: 320px;
+  box-sizing: border-box;
   padding: 32px 19px 16px 19px;
 }
+
+@media (min-width: @tablet-width) {
+  .about-sedona {
+    box-sizing: border-box;
+    width: 768px;
+    padding: 48px 124px 55px 124px;
+  }
+}
+
+  @media (min-width: @desktop-width) {
+    .about-sedona {
+      box-sizing: border-box;
+      width: 1200px;
+    padding: 59px 358px 44px 358px;
+    }
+  }
 
 .text-block__title {
   .text-block__title ();
