--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,3 +6,23 @@
   align-items: center;
   padding: 29px 0;
 }
+
+@media (min-width: @tablet-width) {
+  .footer {
+    box-sizing: border-box;
+    width: 768px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 36px 45px 36px 60px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .footer {
+    box-sizing: border-box;
+    width: 1200px;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 36px 104px 36px 120px;
+  }
+}
