--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -5,8 +5,25 @@
 .page__body {
   min-height: 100%;
   margin: 0;
+  display: flex;
 }
 
+@media (min-width: @desktop-width) {
+  .page__container{
+      width: 1280px;
+      background-color: @grey-container;
+      margin: 0 auto;
+    }
+  }
+
+@media (min-width: @desktop-width) {
+  .page__shadow{
+    width: 1200px;
+    margin: 0 auto;
+    background-color: #ffffff;
+    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
+  }
+}
 
 
 
