--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,3 +23,4 @@
 @import "./blocks/modal.less";
 @import "./blocks/page.less";
 @import "./blocks/main-container.less";
+@import "./blocks/visually-hidden.less";
