--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -8,6 +8,18 @@
   display: flex;
 }
 
+.page__container{
+  width: 320px;
+  margin: 0 auto;
+}
+
+@media (min-width: @tablet-width) {
+  .page__container{
+      width: 768px;
+      margin: 0 auto;
+    }
+  }
+
 @media (min-width: @desktop-width) {
   .page__container{
       width: 1280px;
