--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -1,5 +1,20 @@
 .video {
+  box-sizing: border-box;
   padding: 17px 20px 0px 20px;
+}
+
+@media (min-width: @tablet-width) {
+.video {
+  box-sizing: border-box;
+  padding: 58px 60px 40px 60px;
+}
+}
+
+@media (min-width: @desktop-width) {
+.video {
+  box-sizing: border-box;
+  padding: 62px 200px 120px 200px;
+}
 }
 
 .video__img {
