--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -1,5 +1,20 @@
 .about-catalog {
+  box-sizing: border-box;
   padding: 37px 20px 25px 20px;
+}
+
+@media (min-width: @tablet-width) {
+.about-catalog {
+  box-sizing: border-box;
+  padding: 66px 155px;
+}
+}
+
+@media (min-width: @desktop-width) {
+.about-catalog {
+  box-sizing: border-box;
+  padding: 100px 371px 65px 371px;
+}
 }
 
 .about-catalog__title {
