--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -19,12 +19,37 @@
 }
 
 .welcome--catalog {
+  width: 320px;
   background-image: url("/img/catalog/back-catalog-mobile.jpg");
   background-color: darken(@blue, 30%);
   background-size: 100% 100%;
   background-repeat: no-repeat;
   display: flex;
 }
+
+@media (min-width: @tablet-width) {
+  .welcome--catalog {
+    width: 768px;
+    width: 320px;
+    background-image: url("/img/catalog/back-catalog-tablet.jpg");
+    background-color: darken(@blue, 30%);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+  }
+}
+
+  @media (min-width: @desktop-width) {
+    .welcome--catalog {
+      width: 320px;
+      background-image: url("/img/catalog/back-catalog-desktop.jpg");
+      background-color: darken(@blue, 30%);
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      display: flex;}
+    }
+
+
 
 .welcome__img {
   margin: 90px 19px 85px 19px;
