--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -1,5 +1,20 @@
 .about-form {
+  box-sizing: border-box;
   padding: 36px 20px 28px 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .about-form {
+    box-sizing: border-box;
+    padding: 64px 166px 102px 166px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .about-form {
+    box-sizing: border-box;
+    padding: 115px 383px 67px 383px;
+  }
 }
 
 .about-form__title {
