--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,7 +1,54 @@
-.feedback__field {
+.feedback {
+  box-sizing: border-box;
   margin: 0;
   padding: 24px 20px 39px 20px;
+  width: 280px;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__field {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 60px 102px 64px 102px;
+    display: grid;
+    grid-template-columns: repeat(2, 324px);
+    width: 648px;
+  }
+  }
+
+  @media (min-width: @desktop-width) {
+  .feedback__field {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 67px 120px 64px 120px;
+    display: grid;
+    grid-template-columns: repeat(2, 480px);
+    width: 960px;
+  }
+  }
+
+  .feedback__field {
   border: none;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__field {
+  border: none;
+}
+}
+
+@media (min-width: @desktop-width) {
+.feedback__field {
+  border: none;
+}
+}
+
+.feedback__first-row {
+  @media (min-width: @tablet-width) {
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
 }
 
 .feedback__button {
@@ -84,8 +131,38 @@
   text-align: left;
 }
 
+@media (min-width: @tablet-width) {
+.feedback__input--text {
+  width: 648px;;
+  min-height: 150px;
+}
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__input--text {
+    width: 768px;
+    min-height: 160px;
+  }
+}
+
 .feedback__button--blue {
   width: 281px;
   padding: 18px 33px 14px 33px;
   margin-bottom: 0;
+}
+
+@media (min-width: @tablet-width) {
+.feedback__button--blue {
+  width: 324px;
+  padding: 18px 49px 14px 49px;
+  margin-bottom: 0;
+}
+}
+
+@media (min-width: @desktop-width) {
+.feedback__button--blue {
+  width: 384px;
+  padding: 18px 58px 14px 58px;
+  margin-bottom: 0;
+}
 }
