--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -4,17 +4,19 @@
 }
 
 @media (min-width: @tablet-width) {
-.about-catalog {
-  box-sizing: border-box;
-  padding: 66px 155px;
-}
+  .about-catalog {
+    width: 768px;
+    box-sizing: border-box;
+    padding: 66px 155px;
+  }
 }
 
 @media (min-width: @desktop-width) {
-.about-catalog {
-  box-sizing: border-box;
-  padding: 100px 371px 65px 371px;
-}
+  .about-catalog {
+    width: 1200px;
+    box-sizing: border-box;
+    padding: 100px 371px 65px 371px;
+  }
 }
 
 .about-catalog__title {
