--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -5,15 +5,19 @@
 
 @media (min-width: @tablet-width) {
   .about-form {
+    width: 768px;
     box-sizing: border-box;
-    padding: 64px 166px 102px 166px;
+    padding: 64px 166px 0px 166px;
+    margin-bottom: 102px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .about-form {
+    width: 1200px;
     box-sizing: border-box;
-    padding: 115px 383px 67px 383px;
+    padding: 115px 383px 0px 383px;
+    margin-bottom: 67px;
   }
 }
 
