--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -7,19 +7,23 @@
   z-index: 1;
   width: 100%;
   display: none;
-  }
+}
 
-  @media (min-width: @tablet-width) {
-    .site-list {
-      display: block;
-    }
+@media (min-width: @tablet-width) {
+  .site-list {
+    display: block;
+    display: flex;
+    justify-content: space-between;
   }
+}
 
-  @media (min-width: @desktop-width) {
-    .site-list {
-      display: block;
-    }
+@media (min-width: @desktop-width) {
+  .site-list {
+    display: block;
+    display: flex;
+    justify-content: space-between;
   }
+}
 
 .site-list__item {
   width: 320px;
@@ -29,4 +33,3 @@
   color: @white;
   text-decoration: none;
 }
-
