--- a/source/less/blocks/video.less
+++ b/source/less/blocks/video.less
@@ -4,17 +4,19 @@
 }
 
 @media (min-width: @tablet-width) {
-.video {
-  box-sizing: border-box;
-  padding: 58px 60px 40px 60px;
-}
+  .video {
+    width: 768px;
+    box-sizing: border-box;
+    padding: 58px 60px 40px 60px;
+  }
 }
 
 @media (min-width: @desktop-width) {
-.video {
-  box-sizing: border-box;
-  padding: 62px 200px 120px 200px;
-}
+  .video {
+    width: 1200px;
+    box-sizing: border-box;
+    padding: 62px 200px 120px 200px;
+  }
 }
 
 .video__img {
