--- a/source/less/blocks/welcome.less
+++ b/source/less/blocks/welcome.less
@@ -13,9 +13,9 @@
 }
 
 @media (min-width: @desktop-width) {
-.welcome {
-  background-image: url("/img/welcome-desktop.jpg");
-}
+  .welcome {
+    background-image: url("/img/welcome-desktop.jpg");
+  }
 }
 
 .welcome--catalog {
@@ -39,15 +39,16 @@
   }
 }
 
-  @media (min-width: @desktop-width) {
-    .welcome--catalog {
-      width: 320px;
-      background-image: url("/img/catalog/back-catalog-desktop.jpg");
-      background-color: darken(@blue, 30%);
-      background-size: 100% 100%;
-      background-repeat: no-repeat;
-      display: flex;}
-    }
+@media (min-width: @desktop-width) {
+  .welcome--catalog {
+    width: 320px;
+    background-image: url("/img/catalog/back-catalog-desktop.jpg");
+    background-color: darken(@blue, 30%);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+  }
+}
 
 
 
