--- a/source/less/blocks/about-form.less
+++ b/source/less/blocks/about-form.less
@@ -1,5 +1,24 @@
 .about-form {
+  box-sizing: border-box;
   padding: 36px 20px 28px 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .about-form {
+    width: 768px;
+    box-sizing: border-box;
+    padding: 64px 166px 0px 166px;
+    margin-bottom: 102px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .about-form {
+    width: 1200px;
+    box-sizing: border-box;
+    padding: 115px 383px 0px 383px;
+    margin-bottom: 67px;
+  }
 }
 
 .about-form__title {
