--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,9 +1,10 @@
 .header {
   background-color: @white;
   display: flex;
-  width: 320px;
+  flex-direction: column;
 }
 
 .header__logo {
   margin: 0 auto;
+  height: 96px;
 }
