--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -8,6 +8,20 @@
   list-style-type: none;
 }
 
+@media (min-width: @tablet-width) {
+  .advantages__list {
+    display: grid;
+    grid-template-columns: repeat(3, 256px);
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__list {
+    display: grid;
+    grid-template-columns: repeat(3, 400px);
+  }
+}
+
 .advantages__item {
   padding: 24px 26px;
   background-color: @grey-advantages;
@@ -18,10 +32,51 @@
   padding: 54px 19px 0px 19px;
 }
 
+@media (min-width: @tablet-width) {
+  .advantages__item--blue-theme {
+    display: flex;
+    grid-column: 1/-1;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__item--blue-theme {
+    display: flex;
+    grid-column: 1/-1;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .advantages__text {
+    width: 256px;
+    box-sizing: border-box;
+    padding: 40px 32px 44px 32px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__text {
+    width: 400px;
+    box-sizing: border-box;
+    padding: 47px 53px 56px 52px;
+  }
+}
+
 .advantages__img {
-  margin-top: 40px;
+  object-fit: cover;
   height: 100%;
-  width: 100%;
+}
+
+@media (min-width: @tablet-width) {
+  .advantages__img--bridge {
+    order: 1;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__img--bridge {
+    order: 1;
+  }
 }
 
 .advantages__item--icon {
