--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,7 +1,72 @@
-.feedback__field {
+.feedback__form {
+  box-sizing: border-box;
   margin: 0;
   padding: 24px 20px 39px 20px;
+  width: 280px;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__form {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0px 60px 48px 60px;
+    display: grid;
+    grid-template-columns: repeat(2, 324px);
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__form {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0px 120px 64px 120px;
+    display: grid;
+    grid-template-columns: repeat(2, 480px);
+    width: 1200px;
+  }
+}
+
+
+@media (min-width: @tablet-width) {
+  .feedback__wrapper--line {
+    grid-column: 1/-1;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .feedback__wrapper--line {
+    grid-column: 1/-1;
+  }
+}
+
+.feedback__field {
   border: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__field {
+    border: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__field {
+    border: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .feedback__button {
@@ -17,6 +82,29 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
 }
 
 .feedback__choice {
@@ -84,8 +172,39 @@
   text-align: left;
 }
 
+@media (min-width: @tablet-width) {
+  .feedback__input--text {
+    width: 648px;
+    ;
+    min-height: 150px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__input--text {
+    width: 768px;
+    min-height: 160px;
+  }
+}
+
 .feedback__button--blue {
   width: 281px;
   padding: 18px 33px 14px 33px;
   margin-bottom: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .feedback__button--blue {
+    width: 324px;
+    padding: 18px 49px 14px 49px;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .feedback__button--blue {
+    width: 384px;
+    padding: 18px 58px 14px 58px;
+    margin-bottom: 0;
+  }
 }
