--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -2,3 +2,19 @@
   width: 100%;
   height: 100%;
 }
+
+@media (min-width: @tablet-width) {
+  .map {
+    background-image: url("/img/map-tablet.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .map {
+    background-image: url("/img/map-desktop.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+  }
+}
