--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -4,10 +4,29 @@
   margin: 0;
   padding: 0;
   .text-block__title();
+  z-index: 1;
+  width: 100%;
+  display: none;
+}
+
+@media (min-width: @tablet-width) {
+  .site-list {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .site-list {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .site-list__item {
-  width: 100%;
+  width: 320px;
 }
 
 .site-list__link {
