Навигация почти получилась

--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,10 +1,16 @@
 .header {
   background-color: @white;
-  display: flex;
-  flex-direction: column;
+  width: 320px;
+  min-height: 56px;
 }
 
-.header__logo {
-  margin: 0 auto;
+.header_img {
+  position: absolute;
+  top: 0;
+  left: 20%;
   height: 96px;
+  width: 185px;
+  margin-bottom: -39px;
 }
+
+
