--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,8 +1,6 @@
 .nav {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  width: 100%;
+  width: 320px;
+  min-height: 56px;
 }
 
 @media (min-width: @tablet-width) {
@@ -25,11 +23,84 @@
   }
 }
 
-.nav__toggle {
-  background-image: url("img/icons/menu-mobile.svg");
-  background-size: 22px 22px;
-  background-repeat: no-repeat;
-  background-position: center;
+@media (max-width: @mobile-width-only) {
+  .nav--closed .site-list__item {
+    display: none;
+  }
+
+.nav--closed .nav__img--opened {
+  display: none;
+}
+
+
+.nav--closed .nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 56px;
+  height: 56px;
+  background-color: @white;
+  cursor: pointer;
+  border: none;
+}
+
+.nav--closed .nav__toggle .nav__img--closed {
+  display: block;
+    fill: @blue;
+    padding-left: 11px;
+    padding-right: 19px;
+  }
+
+  .nav--closed .nav__toggle:hover .nav__img--closed {
+    fill: rgba(129, 179, 210, 0.6);
+  }
+
+  .nav--closed .nav__toggle:active .nav__img--closed {
+    fill: rgba(129, 179, 210, 0.3);
+  }
+
+  .nav--nojs .nav__img--closed {
+    display: none;
+  }
+
+  .nav--nojs .site-list {
+    display: block;
+  }
+
+  .nav--opened .nav__toggle {
+    box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 56px;
+  height: 56px;
+  background-color: @blue;
+  cursor: pointer;
+  border: none;
+}
+
+.nav--opened .nav__img--closed {
+  display: none;
+}
+
+.nav--opened .nav__toggle .nav__img--opened {
+  display: block;
+  fill: @white;
+  padding-left: 11px;
+  padding-right: 19px;
+}
+
+.nav--opened .nav__toggle:hover .nav__img--opened {
+  fill: rgba(255, 255, 255, 0.6);
+}
+
+.nav--opened .nav__toggle:active .nav__img--opened {
+  fill: rgba(255, 255, 255, 0.3);
+}
 }
 
 @media (min-width: @tablet-width) {
@@ -43,3 +114,5 @@
     display: none;
   }
 }
+
+
