--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -4,9 +4,8 @@
   margin: 0;
   padding: 0;
   .text-block__title();
-  z-index: 1;
+  z-index: 3;
   width: 100%;
-  display: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -26,8 +25,15 @@
 }
 
 .site-list__item {
+  box-sizing: border-box;
   width: 320px;
+  min-height: 55px;
+  padding-top: 17px;
+  padding-bottom: 12px;
+  border-top: 1px solid rgba(1, 1, 1, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
+
 
 .site-list__link {
   color: @white;
