--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -4,13 +4,14 @@
   min-height: 56px;
 }
 
-.header_img {
-  position: absolute;
-  top: 0;
-  left: 20%;
+.header__logo {
+text-align: center;
   height: 96px;
   width: 185px;
-  margin-bottom: -39px;
+  margin-bottom: -106px;
 }
 
-
+.header__img {
+  display: inline-block;
+  text-align: center;
+}
