--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -1,4 +1,5 @@
 .nav {
+  box-sizing: border-box;
   width: 320px;
   min-height: 56px;
 }
@@ -24,6 +25,10 @@
 }
 
 @media (max-width: @mobile-width-only) {
+  .nav--closed .nav {
+    display: none;
+  }
+
   .nav--closed .site-list__item {
     display: none;
   }
@@ -61,12 +66,30 @@
     fill: rgba(129, 179, 210, 0.3);
   }
 
-  .nav--nojs .nav__img--closed {
+  .nav--nojs .nav__toggle .nav__img--closed {
     display: none;
   }
 
-  .nav--nojs .site-list {
+  .nav--nojs .nav__toggle {
     display: block;
+    background-color: @blue;
+  }
+
+  .nav--nojs .nav__toggle .nav__img--opened{
+    display: block;
+    fill: @white;
+    padding-left: 11px;
+    padding-right: 19px;
+  }
+
+  .nav--nojs .nav__wrapper {
+    position: static;
+    min-height: 0;
+  }
+
+  .nav--nojs .site-list__item {
+    display: block;
+    z-index: 10;
   }
 
   .nav--opened .nav__toggle {
