--- a/source/less/blocks/find-hotel.less
+++ b/source/less/blocks/find-hotel.less
@@ -23,14 +23,12 @@
 .find-hotel__button {
   width: 284px;
   height: 58px;
-  margin-top: 15px;
 }
 
 @media (min-width: @tablet-width) {
   .find-hotel__button {
     width: 458px;
     height: 58px;
-    margin-top: 40px;
   }
 }
 
@@ -38,15 +36,43 @@
   .find-hotel__button {
     width: 458px;
     height: 58px;
-    margin-top: 46px;
   }
 }
 
-
 .find-hotel__title {
   .text-block__title();
+  margin-bottom: 30px;
+}
+
+@media (min-width: @tablet-width) {
+.find-hotel__title {
+  .text-block__title();
+  margin-bottom: 37px;
+}
+}
+
+@media (min-width: @desktop-width) {
+.find-hotel__title {
+  .text-block__title();
+  margin-bottom: 39px;
+}
 }
 
 .find-hotel__description {
   .text-block__description();
+  margin-bottom: 34px;
+}
+
+@media (min-width: @tablet-width) {
+.find-hotel__description {
+  .text-block__description();
+  margin-bottom: 40px;
+}
+}
+
+@media (min-width: @desktop-width) {
+.find-hotel__description {
+  .text-block__description();
+  margin-bottom: 46px;
+}
 }
