--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -2,9 +2,22 @@
   list-style-type: none;
   margin: 34px 0 40px 0;
   padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .social__link {
   text-decoration: none;
   color: @black;
+}
+
+.social__item {
+.button();
+width: 48px;
+height: 48px;
+margin-right: 6px;
+}
+
+.social__item:last-child {
+  margin-right: 0;
 }
