--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,17 +1,18 @@
 .header {
   background-color: @white;
-  width: 320px;
-  min-height: 56px;
+  display: flex;
 }
 
 .header__logo {
-text-align: center;
-  height: 96px;
-  width: 185px;
-  margin-bottom: -106px;
+text-decoration: none;
 }
 
 .header__img {
-  display: inline-block;
+  display: block;
   text-align: center;
+  height: 96px;
+  width: 185px;
+  text-align: center;
+  margin-bottom: -40px;
+  margin-left: 67px;
 }
