--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,20 +1,18 @@
-.map__image {
-  width: 100%;
-  height: 100%;
+.map__img {
+  border: none;
+  display: block;
+  width: 320px;
+  height: 350px;
 }
 
 @media (min-width: @tablet-width) {
-  .map {
-    background-image: url("/img/map-tablet.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
+.map__img {
+  width: 768px;
+}
 }
 
 @media (min-width: @desktop-width) {
-  .map {
-    background-image: url("/img/map-desktop.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
+.map__img {
+  width: 1200px;
+}
 }
