Исправляет всякие штуки на главной и в каталоге

--- a/source/less/blocks/about-catalog.less
+++ b/source/less/blocks/about-catalog.less
@@ -7,7 +7,7 @@
   .about-catalog {
     width: 768px;
     box-sizing: border-box;
-    padding: 66px 155px;
+    padding: 66px 155px 30px 155px;
   }
 }
 
@@ -15,13 +15,29 @@
   .about-catalog {
     width: 1200px;
     box-sizing: border-box;
-    padding: 100px 371px 65px 371px;
+    padding: 104px 371px 69px 371px;
   }
 }
 
 .about-catalog__title {
   .text-block__title ();
+  margin-bottom: 32px;
+  font-size: 18px;
 }
+
+@media (min-width: @tablet-width) {
+  .about-catalog__title {
+    .text-block__title ();
+    font-size: 30px;
+  }
+  }
+
+  @media (min-width: @desktop-width) {
+    .about-catalog__title {
+      .text-block__title ();
+      font-size: 30px;
+    }
+    }
 
 .about-catalog__description {
   .text-block__description ();
