--- a/source/less/blocks/html-academy.less
+++ b/source/less/blocks/html-academy.less
@@ -1,5 +1,34 @@
-.html-academy {
+.html-academy__link {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
+
+.html-academy__description {
+.text-block__description();
+margin-right: 12px;
+}
+
+.html-academy__link{
+text-decoration: none;
+}
+
+.html-academy__link:hover .html-academy__description {
+color: @blue;
+
+}
+
+.html-academy__link:active .html-academy__description {
+  color: @marron-social;
+  }
+
+  .html-academy__img {
+    fill: @black;
+  }
+
+  .html-academy__link:hover .html-academy__img  {
+    fill: @blue;
+  }
+
+  .html-academy__link:active .html-academy__img  {
+    fill: @marron-social;
+  }
