--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -82,18 +82,6 @@
   height: 100%;
 }
 
-@media (min-width: @tablet-width) {
-  .advantages__img--bridge {
-    order: 1;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .advantages__img--bridge {
-    order: 1;
-  }
-}
-
 .advantages__item--icon {
   padding-left: 65px;
   padding-right: 30px;
@@ -192,3 +180,14 @@ padding: 39px 15px 35px 16px;
 }
 }
 
+@media (min-width: @tablet-width) {
+.advantages__text--bridge {
+order: 2;
+}
+}
+
+@media (min-width: @desktop-width) {
+  .advantages__text--bridge {
+  order: 2;
+  }
+  }
