--- a/source/less/blocks/fotoalbum.less
+++ b/source/less/blocks/fotoalbum.less
@@ -8,6 +8,7 @@
   .fotoalbum__list {
     display: grid;
     grid-template-columns: repeat(2, 324px);
+    padding: 32px 60px 29px 60px;
   }
 }
 
@@ -15,17 +16,21 @@
   .fotoalbum__list {
     display: grid;
     grid-template-columns: repeat(3, 400px);
+    padding: 0;
   }
 }
 
 .fotoalbum__item {
+  box-sizing: border-box;
   padding: 24px 20px 25px 20px;
 }
+
 
 @media (min-width: @tablet-width) {
   .fotoalbum__item {
     display: grid;
     grid-template-columns: 229px 95px;
+    padding: 0;
   }
 }
 
@@ -33,6 +38,7 @@
   .fotoalbum__item {
     display: grid;
     grid-template-columns: 229px 171px;
+    padding: 0;
   }
 }
 
@@ -40,32 +46,146 @@
 @media (min-width: @tablet-width) {
   .fotoalbum__item--first {
     grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: repeat(2, 324px);
   }
 }
 
 @media (min-width: @desktop-width) {
   .fotoalbum__item--first {
     grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: repeat(2, 600px);
   }
 }
 
 .fotoalbum__img {
-  margin: 24px 0px 15px 0px;
+  margin-top: 24px;
+  margin-bottom: 15px;
+}
+
+@media (min-width: @tablet-width) {
+  .fotoalbum__img {
+    grid-column: 1/-1;
+    padding: 0;
+    margin:0;
+    margin-bottom: 22px;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .fotoalbum__img {
+    grid-column: 1/-1;
+    padding: 0;
+    margin: 0;
+    margin-bottom: -80px;
+  }
 }
 
 .fotoalbum__title {
   .text-block__title();
+  font-size: 14px;
   text-align: left;
+  margin: 0;
 }
 
+@media (min-width: @desktop-width) {
+.fotoalbum__title {
+  color: @white;
+  }
+  }
 
 .fotoalbum__description {
   .text-block__description();
   text-transform: none;
   text-align: left;
+  margin-bottom: 17px;
+}
+
+@media (min-width: @tablet-width) {
+.fotoalbum__description {
+  margin-bottom: 15px;
+}
+}
+
+@media (min-width: @desktop-width) {
+  .fotoalbum__description {
+    padding: 0;
+    margin: 0;
+    color: @white;
+  }
+  }
+
+
+@media (min-width: @tablet-width) {
+.fotoalbum__text-wrapper {
+  padding-left: 20px;
+
+}
+}
+
+@media (min-width: @desktop-width) {
+  .fotoalbum__text-wrapper {
+    box-sizing: border-box;
+  padding-left: 20px;
+  padding-top: 20px;
+  height: 80px;
+  background-color: rgba(1, 1, 1, 0.3);
+    }
+  }
+
+.fotoalbum__number-wrapper {
+display: flex;
+}
+
+@media (min-width: @tablet-width) {
+.fotoalbum__number-wrapper {
+justify-content: flex-end;
+padding-top: 8px;
+padding-right: 20px;
+text-align: right;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .fotoalbum__number-wrapper {
+    justify-content: flex-end;
+    padding-top: 28px;
+    padding-right: 20px;
+    text-align: right;
+    background-color: rgba(1, 1, 1, 0.3);
+
+    }
+  }
+
+.fotoalbum__button {
+  background-color: transparent;
+  width:23px;
+  height:21px;
+  margin-right: 14px;
+  border: none;
+}
+
+.fotoalbum__like {
+fill: rgba(1, 1, 1, 0.3);
+}
+
+@media (min-width: @desktop-width) {
+.fotoalbum__like {
+  fill: @white;
+  }
 }
 
 .fotoalbum__number {
   .text-block__title();
   text-align: left;
+  margin: 0;
+  font-size: 14px;
+}
+
+@media (min-width: @desktop-width) {
+.fotoalbum__number {
+color: @white;
+}
 }
