--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,18 +1,58 @@
 .header {
   background-color: @white;
   display: flex;
+  position: relative;
 }
+
+@media (min-width: @tablet-width) {
+.header {
+flex-direction: column;
+}
+}
+
+
 
 .header__logo {
 text-decoration: none;
 }
 
+@media (min-width: @tablet-width) {
+  .header__logo {
+    order: 2;
+    align-self: center;
+
+}
+}
+
+@media (min-width: @desktop-width) {
+  .header__logo {
+    order: 2;
+    align-self: center;
+}
+}
+
 .header__img {
   display: block;
-  text-align: center;
   height: 96px;
   width: 185px;
-  text-align: center;
   margin-bottom: -40px;
   margin-left: 67px;
+}
+
+@media (min-width: @tablet-width) {
+.header__img {
+  margin: 0;
+  margin-top: -57px;
+  margin-bottom: -39px;
+  z-index: 11;
+}
+}
+
+@media (min-width: @desktop-width) {
+.header__img {
+  margin: 0;
+  margin-top: -57px;
+  margin-bottom: -41px;
+  z-index: 11;
+}
 }
