--- a/source/less/blocks/nav.less
+++ b/source/less/blocks/nav.less
@@ -12,6 +12,7 @@
     width: 768px;
     margin: 0 auto;
     min-height: 56px;
+    margin: 0;
   }
 }
 
@@ -23,6 +24,7 @@
     width: 1200px;
     margin: 0 auto;
     min-height: 56px;
+    margin: 0;
   }
 }
 
@@ -90,7 +92,7 @@
 
   .nav--nojs .site-list__item {
     display: block;
-    z-index: 10;
+    z-index: 3;
   }
 
   .nav--opened .nav__toggle {
