--- a/source/less/blocks/variables.less
+++ b/source/less/blocks/variables.less
@@ -1,11 +1,14 @@
 @black: #000000;
 @blue: #81B3D2;
+@blue-hover:#669EC0;
+@blue-active: #5496BD;
 @white: #ffffff;
 @grey-input: #F2F2F2;
 @grey-button: #E6E6E6;
 @grey-advantages: #EEEEEE;
 @grey-container: #E7E5E5;
 @marron-link: #766357;
+@marron-social: #B3B3B3;
 
 
 @tablet-width: 768px;
